--- a/examples/blogs/index.ejs
+++ b/examples/blogs/index.ejs
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -7,7 +6,10 @@
     <link href="/index.css" rel="stylesheet">
   </head>
   <body>
-    <div id='root'></div>
+    <div id="root"><%- reactOutput %></div>
+    <script id="preloadedData" type="application/json">
+      <%- JSON.stringify(preloadedData).replace(/\//g, '\\/') %>
+    </script>
     <script src='/index.js' type='text/javascript'></script>
   </body>
 </html>
