--- a/examples/blogs/static/index.css
+++ b/examples/blogs/static/index.css
@@ -1,37 +1,89 @@
 * {
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 html, body {
   margin: 0;
   font-family: sans-serif;
-}
-
-header {
-  background-color: #999;
-  color: #fff;
-  padding: 10px;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 600px;
+  font-size: 13px;
 }
 
 input, textarea {
-  display: block;
-  width: 100%;
+  font-family: sans-serif;
+  font-size: 1rem;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+input {
+  height: 2.25rem;
+}
+
+input[type=text],
+input[type=email],
+input[type=password],
+textarea {
+  padding: 0.5rem;
+  vertical-align: middle;
+  -webkit-appearance: none;
+  border: 1px solid rgba(0,0,0,.125);
 }
 
 input[type=submit] {
-  float: right;
-  width: auto;
+  font-size: 0.875rem;
+  font-weight: 500;
+  cursor: pointer;
+  padding: 0.5rem 1.5rem;
+  height: 2.25rem;
+  border: none;
+  vertical-align: middle;
+  -webkit-appearance: none;
+  color: #fff;
+  background-color: #0074d9;
+  align-self: flex-end;
+}
+input[type=submit]:hover {
+  box-shadow: inset 0 0 0 20rem rgba(0,0,0,.0625);
+}
+
+form.col input, form.col textarea {
+  margin-bottom: 1rem;
+}
+
+form.row input {
+  margin-left: 1rem;
+}
+
+form.row input:first-child {
+  margin-left: 0;
+}
+
+.error {
+  color: #ff4136;
+  margin-bottom: 0.5rem;
 }
 
 hr {
   border: 0;
-  border-bottom: solid 1px #ddd;
-  margin: 1em 0;
+  border-bottom: 1px solid rgba(0,0,0,.125);
+  margin: 1rem 0;
+}
+
+a {
+  color: #001F3F;
+  text-decoration: underline;
+  cursor: pointer;
+}
+a:hover {
+  color: #0074d9;
+}
+
+/*flex grid helpers*/
+
+.container {
+  margin: 0 auto;
+  max-width: 600px;
 }
 
 .row {
@@ -48,16 +100,82 @@ hr {
   flex: 1;
 }
 
-.mx-1 {
-  margin-left: -10px;
-  margin-right: -10px;
+.flex-2 {
+  flex: 2
 }
 
-.my1 {
-  margin-top: 10px;
-  margin-bottom: 10px;
+.align-stretch {
+  align-items: stretch;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.align-end {
+  align-items: flex-end;
+}
+
+.text-right {
+  text-align: right;
+}
+
+/*margin and padding helpers*/
+
+.m0 {
+  margin: 0;
+}
+
+.m1 {
+  margin: 1rem;
 }
 
 .p1 {
-  padding: 10px;
+  padding: 1rem;
+}
+
+.mx-1 {
+  margin-left: -1rem;
+  margin-right: -1rem;
+}
+
+.mx1 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.my1 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.mt1 {
+  margin-top: 1rem;
+}
+
+.mb1 {
+  margin-bottom: 1rem;
+}
+
+.ml1 {
+  margin-left: 1rem;
+}
+
+.mr1 {
+  margin-right: 1rem;
+}
+
+
+/*color helpers*/
+
+.main-bg {
+  background: #ccc;
+}
+
+.light-bg {
+  background: #eee;
+}
+
+.border-bottom {
+  border-bottom: solid 1px #eee;
 }
