--- a/packages/blogs-example/static/index.css
+++ b/packages/blogs-example/static/index.css
@@ -1,19 +1,26 @@
 * {
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: Avenir, sans-serif;
 }
 
 html, body {
   margin: 0;
-  font-family: sans-serif;
   font-size: 13px;
 }
 
+form {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: stretch;
+}
+
 input, textarea {
-  font-family: sans-serif;
+  font-family: Avenir, sans-serif;
   font-size: 1rem;
   margin-top: 0;
   margin-bottom: 0;
+  border-radius: 3px;
+  margin-bottom: 1rem;
 }
 
 input {
@@ -39,24 +46,12 @@ input[type=submit] {
   border: none;
   vertical-align: middle;
   -webkit-appearance: none;
-  color: #fff;
-  background-color: #0074d9;
+  color: white;
+  background-color: rebeccapurple;
   align-self: flex-end;
 }
 input[type=submit]:hover {
   box-shadow: inset 0 0 0 20rem rgba(0,0,0,.0625);
-}
-
-form.col input, form.col textarea {
-  margin-bottom: 1rem;
-}
-
-form.row input {
-  margin-left: 1rem;
-}
-
-form.row input:first-child {
-  margin-left: 0;
 }
 
 .error {
@@ -71,12 +66,9 @@ hr {
 }
 
 a {
-  color: #001F3F;
-  text-decoration: underline;
+  color: rebeccapurple;
   cursor: pointer;
-}
-a:hover {
-  color: #0074d9;
+  text-decoration: none;
 }
 
 /*flex grid helpers*/
