--- a/packages/blogs-example/static/index.css
+++ b/packages/blogs-example/static/index.css
@@ -8,6 +8,15 @@ html, body {
   font-size: 13px;
 }
 
+header {
+  padding: 1rem;
+  margin: 0 0 1.5rem;
+}
+
+h3 {
+  margin: 0 0 1rem;
+}
+
 form {
   display: flex;
   flex-flow: column nowrap;
@@ -15,43 +24,35 @@ form {
 }
 
 input, textarea {
-  font-family: Avenir, sans-serif;
   font-size: 1rem;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0 0 1rem;
   border-radius: 3px;
-  margin-bottom: 1rem;
-}
-
-input {
-  height: 2.25rem;
-}
-
-input[type=text],
-input[type=email],
-input[type=password],
-textarea {
   padding: 0.5rem;
-  vertical-align: middle;
-  -webkit-appearance: none;
   border: 1px solid rgba(0,0,0,.125);
 }
 
-input[type=submit] {
+button {
   font-size: 0.875rem;
   font-weight: 500;
+  border-radius: 3px;
   cursor: pointer;
   padding: 0.5rem 1.5rem;
-  height: 2.25rem;
   border: none;
-  vertical-align: middle;
-  -webkit-appearance: none;
   color: white;
   background-color: rebeccapurple;
   align-self: flex-end;
 }
-input[type=submit]:hover {
+
+button:hover {
   box-shadow: inset 0 0 0 20rem rgba(0,0,0,.0625);
+}
+
+input, button {
+  height: 2.25rem;
+}
+
+textarea {
+  height: 21rem;
 }
 
 .error {
@@ -62,7 +63,7 @@ input[type=submit]:hover {
 hr {
   border: 0;
   border-bottom: 1px solid rgba(0,0,0,.125);
-  margin: 1rem 0;
+  margin: 1.5rem 0;
 }
 
 a {
@@ -94,80 +95,4 @@ a {
 
 .flex-2 {
   flex: 2
-}
-
-.align-stretch {
-  align-items: stretch;
-}
-
-.align-center {
-  align-items: center;
-}
-
-.align-end {
-  align-items: flex-end;
-}
-
-.text-right {
-  text-align: right;
-}
-
-/*margin and padding helpers*/
-
-.m0 {
-  margin: 0;
-}
-
-.m1 {
-  margin: 1rem;
-}
-
-.p1 {
-  padding: 1rem;
-}
-
-.mx-1 {
-  margin-left: -1rem;
-  margin-right: -1rem;
-}
-
-.mx1 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-.my1 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.mt1 {
-  margin-top: 1rem;
-}
-
-.mb1 {
-  margin-bottom: 1rem;
-}
-
-.ml1 {
-  margin-left: 1rem;
-}
-
-.mr1 {
-  margin-right: 1rem;
-}
-
-
-/*color helpers*/
-
-.main-bg {
-  background: #ccc;
-}
-
-.light-bg {
-  background: #eee;
-}
-
-.border-bottom {
-  border-bottom: solid 1px #eee;
 }
