--- a/packages/gestalt-cli/template/server.js.ejs
+++ b/packages/gestalt-cli/template/server.js.ejs
@@ -1,6 +1,6 @@
 import express from 'express';
 import gestaltServer from 'gestalt-server';
-import <%= databaseAdapterFn %> from '<%= databaseAdapter %>';
+import gestaltPostgres from 'gestalt-postgres';
 import importAll from 'import-all';
 
 const app = express();
@@ -9,15 +9,9 @@ app.use(gestaltServer({
   schemaPath: `${__dirname}/schema.graphql`,
   objects: importAll(`${__dirname}/objects`),
   mutations: importAll(`${__dirname}/mutations`),
-  database: <%= databaseAdapterFn %>({<%-
-    '\n    ' + Object.entries(databaseAdapterConfig).map(function(pair) {
-      const key = pair[0];
-      const value = pair[1];
-      return (
-        key + ': ' + ((typeof value === 'string') ? '\'' + value + '\'' : value)
-      );
-    }).join(',\n    ') + '\n  '
-  %>}),
+  database: gestaltPostgres({
+    databaseURL: '<%- databaseURL %>',
+  }),
   development: true,
   secret: '༼ つ ◕_◕ ༽つ',
 }));
